add effects - carousel / waypoint

--- a/front_end/public/css/scss/style.scss
+++ b/front_end/public/css/scss/style.scss
@@ -394,10 +394,10 @@ h1, h2, h3, h4, h5,
 		height: 850px;
 	}
 	.breadcrumbs{
-		margin-top:13em;
+		margin-top:11em;
 	}
 	&.hero-wrap-2{
-		height: 600px !important;
+		height: 450px !important;
 		position: relative;
 		.overlay{
 			width: 100%;
@@ -405,7 +405,7 @@ h1, h2, h3, h4, h5,
 			height: 700px;
 		}
 		.slider-text{
-			height: 700px !important;
+			height: 500px !important;
 		}
 	}
 }
@@ -1115,20 +1115,20 @@ footer {
 
 
 /*月曆plugin*/
-.date{
-	position: relative;
-	background: #fff;
-	padding: 0;
-	cursor: pointer;
-   & .input-group-addon{
-	position: absolute;
-	top: 0;
-	right: 0;
-	font-size: 1.25rem;
-	height: 100%;
-	line-height: 1.8;
-  }
-}
+// .date{
+// 	position: relative;
+// 	background: #fff;
+// 	padding: 0;
+// 	cursor: pointer;
+//    & .input-group-addon{
+// 	position: absolute;
+// 	top: 0;
+// 	right: 0;
+// 	font-size: 1.25rem;
+// 	height: 100%;
+// 	line-height: 1.8;
+//   }
+// }
 
 @media(max-width: 600px){
 	.table-rwd.table {
@@ -1163,4 +1163,11 @@ footer {
 	  margin-right: .4em;
 	}
   }
-  
+
+
+// slick carousel
+.slick-next {right: -12px;} 
+.slick-prev {left: -12px;}
+.slick-prev, .slick-next{width: 40px;height: 40px;z-index: 100;} 
+.slick-prev:before, .slick-next:before {color: #ccc;font-size: 2.5rem;}
+.slick-dots{bottom: 0;}
